src/libs/languageserverprotocol/servercapabilities.cpp
@@ -306,50 +306,6 @@ bool TextDocumentRegistrationOptions::filterApplies(const Utils::FilePath &fileN
     });
 }
 
-Utils::optional<QList<QList<QString>>> ServerCapabilities::SemanticHighlightingServerCapabilities::scopes() const
-{
-    QList<QList<QString>> scopes;
-    if (!contains(scopesKey))
-        return Utils::nullopt;
-    for (const QJsonValue jsonScopeValue : value(scopesKey).toArray()) {
-        if (!jsonScopeValue.isArray())
-            return {};
-        QList<QString> scope;
-        for (const QJsonValue value : jsonScopeValue.toArray()) {
-            if (!value.isString())
-                return {};
-            scope.append(value.toString());
-        }
-        scopes.append(scope);
-    }
-    return Utils::make_optional(scopes);
-}
-
-void ServerCapabilities::SemanticHighlightingServerCapabilities::setScopes(
-    const QList<QList<QString>> &scopes)
-{
-    QJsonArray jsonScopes;
-    for (const QList<QString> &scope : scopes) {
-        QJsonArray jsonScope;
-        for (const QString &value : scope)
-            jsonScope.append(value);
-        jsonScopes.append(jsonScope);
-    }
-    insert(scopesKey, jsonScopes);
-}
-
-bool ServerCapabilities::SemanticHighlightingServerCapabilities::isValid() const
-{
-    return contains(scopesKey) && value(scopesKey).isArray()
-           && Utils::allOf(value(scopesKey).toArray(), [](const QJsonValue &array) {
-#if QT_VERSION < QT_VERSION_CHECK(6, 0, 0)
-                  return array.isArray() && Utils::allOf(array.toArray(), &QJsonValue::isString);
-#else
-                  return array.isArray() && Utils::allOf(array.toArray(), &QJsonValueRef::isString);
-#endif
-              });
-}
-
 bool ServerCapabilities::ExecuteCommandOptions::isValid() const
 {
     return WorkDoneProgressOptions::isValid() && contains(commandsKey);
