src/libs/languageserverprotocol/servercapabilities.h
@@ -263,17 +263,6 @@ public:
         void clearId() { remove(idKey); }
     };
 
-    class LANGUAGESERVERPROTOCOL_EXPORT SemanticHighlightingServerCapabilities : public JsonObject
-    {
-    public:
-        using JsonObject::JsonObject;
-
-        Utils::optional<QList<QList<QString>>> scopes() const;
-        void setScopes(const QList<QList<QString>> &scopes);
-
-        bool isValid() const override;
-    };
-
     // Defines how text documents are synced. Is either a detailed structure defining each
     // notification or for backwards compatibility the TextDocumentSyncKind number.
     using TextDocumentSync = Utils::variant<TextDocumentSyncOptions, int>;
@@ -463,12 +452,6 @@ public:
     Utils::optional<JsonObject> experimental() const { return optionalValue<JsonObject>(experimentalKey); }
     void setExperimental(const JsonObject &experimental) { insert(experimentalKey, experimental); }
     void clearExperimental() { remove(experimentalKey); }
-
-    Utils::optional<SemanticHighlightingServerCapabilities> semanticHighlighting() const
-    { return optionalValue<SemanticHighlightingServerCapabilities>(semanticHighlightingKey); }
-    void setSemanticHighlighting(const SemanticHighlightingServerCapabilities &semanticHighlighting)
-    { insert(semanticHighlightingKey, semanticHighlighting); }
-    void clearSemanticHighlighting() { remove(semanticHighlightingKey); }
 };
 
 } // namespace LanguageClient
